--- a/src/component/Expenses/Expenses.css
+++ b/src/component/Expenses/Expenses.css
@@ -7,3 +7,8 @@
     border-radius: 12px;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
+
+  .no-data-available {
+    color: white;
+    text-align: center;
+  }
